# deskmate

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CONTEXT_CHECKPOINT.md  DESKMATE_SPEC.md  ERROR_HANDLING_IMPROVEMENTS.md  GIT_SETUP.md  PHASE1_TEST_RESULTS.md  PHASE2_SUMMARY.md  README.md  SETTINGS_IMPLEMENTATION_PLAN.md  TECHNICAL_DEBT_PHASES.md  TESTING.md  docker-compose.yml  pyproject.toml  test_movement_visual.sh  test_nanogpt.py  test_object_manipulation_interactive.py  test_phase10_interactive.py  test_phase10_ui_polish.sh  test_phase12a_deployment.sh  test_phase12b_frontend.html  test_phase12b_integration.py  test_phase7.sh  test_phase8_object_manipulation.sh  test_phase9_idle_mode.sh  test_websocket.py  test_websocket_interactive.py  verify_phase1.py
backend/: .env.example  Dockerfile  Dockerfile.prod  pytest.ini  requirements-phase1.txt  requirements.txt  test_error_improvements.py  test_phase4_complete.py  test_phase5_complete.py  test_websocket.py
backend/app/: config.py  exceptions.py  (+2 more)
config/: objects.yaml  personality.yaml  settings.yaml
deployment/: ubuntu-deployment.md
docs/: DEVELOPER_GUIDE.md  PHASE_12B_MULTI_DEVICE_SPEC.md  PHASE_12_BREAKDOWN.md  SETUP_GUIDE.md  USER_GUIDE.md
frontend/: .eslintrc.js  .prettierignore  .prettierrc  DEVELOPMENT.md  Dockerfile  jest.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
load-testing/: locustfile.py  run_load_tests.sh
scripts/: test_basic.sh  test_import.py  test_phase1.sh  verify_structure.sh
tests/: conftest.py
(+218 files in other folders)
